pgadmin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:9.11.0
        ports:
          - containerPort: 80
