pgadmin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: pgadmin
  ports:
  - port: 80
    targetPort: 80
